tests/dataset/tpc-ds/compiler/c/q67.error
/tmp/TestCCompiler_TPCDS_Goldenq673437920761/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq673437920761/001/prog.c:169:46: error: ‘(store_sale_t *)&store_sales’ is a pointer; did you mean to use ‘->’?
  169 |   list_int tmp1 = list_int_create(store_sales.len * reason.len);
      |                                              ^
      |                                              ->
/tmp/TestCCompiler_TPCDS_Goldenq673437920761/001/prog.c:169:59: error: ‘(reason_t *)&reason’ is a pointer; did you mean to use ‘->’?
  169 |   list_int tmp1 = list_int_create(store_sales.len * reason.len);
      |                                                           ^
      |                                                           ->
/tmp/TestCCompiler_TPCDS_Goldenq673437920761/001/prog.c:178:43: warning: passing argument 2 of ‘contains_list_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  178 |       if (!(contains_list_string(result, r.name))) {
      |                                          ~^~~~~
/tmp/TestCCompiler_TPCDS_Goldenq673437920761/001/prog.c:68:54: note: expected ‘char *’ but argument is of type ‘const char *’
   68 | static int contains_list_string(list_string v, char *item) {
      |                                                ~~~~~~^~~~
/tmp/TestCCompiler_TPCDS_Goldenq673437920761/001/prog.c:186:10: error: conflicting types for ‘result’; have ‘double’
  186 |   double result = _sum_int(tmp1);
      |          ^~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq673437920761/001/prog.c:166:15: note: previous definition of ‘result’ with type ‘list_string’
  166 |   list_string result = list_string_create(2);
      |               ^~~~~~
